--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,16 @@
-aniso8601==9.0.1
-attrs==21.2.0
-certifi==2021.10.8
-charset-normalizer==2.0.7
-click==8.0.3
-cycler==0.10.0
-filterpy==1.4.5
-Flask==1.1.2
-Flask-Cors==3.0.10
-flask-restx==0.5.1
-grpcio==1.41.0
-grpcio-tools==1.41.0
-idna==3.3
-itsdangerous==2.0.1
-Jinja2==3.0.2
-jsonschema==4.1.1
-kiwisolver==1.3.2
-kthread==0.2.2
-llvmlite==0.37.0
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-minio==7.1.0
-mongoengine==0.23.1
 numba==0.54.1
-numpy==1.20.3
-opencv-python==4.5.3.56
-pandas==1.3.4
-Pillow==8.4.0
-protobuf==3.18.1
-pymilvus==0.4.0
-pymongo==3.12.1
-pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-python-dotenv==0.19.0
-pytz==2021.3
-PyYAML==6.0
-redis==3.5.3
-requests==2.26.0
-scipy==1.7.1
+torchvision==0.11.1
+matplotlib==3.4.3
+filterpy==1.4.5
 seaborn==0.11.2
-six==1.16.0
-torch==1.9.0
-torchvision==0.10.0
 tqdm==4.62.3
-typing-extensions==3.10.0.2
-ujson==4.2.0
-Unidecode==1.2.0
-urllib3==1.26.7
-Werkzeug==2.0.2
+Unidecode==1.3.2
+numpy==1.20.3
+opencv_python==4.5.4.58
+pandas==1.3.4
+torch==1.10.0
+kthread==0.2.2
+requests==2.26.0
+Pillow==8.4.0
+PyYAML==6.0
+
